test/types/typedefs/bradc/redefineTypeNames2.good
redefineTypeNames2.chpl:1: In function 'main':
redefineTypeNames2.chpl:3: error: 'real' used before defined (first used here)
